RESOLVED FIXED305703
[GStreamer][WebRTC] String handling improvements in ICE candidate SDP parser
https://bugs.webkit.org/show_bug.cgi?id=305703
Summary [GStreamer][WebRTC] String handling improvements in ICE candidate SDP parser
Philippe Normand
Reported 2026-01-17 08:41:58 PST
.
Attachments
Philippe Normand
Comment 1 2026-01-17 08:45:13 PST
EWS
Comment 2 2026-01-19 04:08:24 PST
Committed 305818@main (e3bbf376857b): <https://commits.webkit.org/305818@main> Reviewed commits have been landed. Closing PR #56768 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-19 04:09:11 PST
Note You need to log in before you can comment on or make changes to this bug.