[GStreamer][WebRTC] String handling improvements in ICE candidate SDP parser https://bugs.webkit.org/show_bug.cgi?id=305703

Reviewed by Xabier Rodriguez-Calvar.

Use owned strings for ICE candidate SDP string tokens, they're then moved to corresponding
RTCIceCandidate::Fields storage after parsing.

Manually tested on https://livekit.io/webrtc/browser-test which displayed garbage ICE candidates
data without this patch.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::parseIceCandidateSDP):

Canonical link: https://commits.webkit.org/305818@main